--- a/src/components/createProduct/CreateProduct.css
+++ b/src/components/createProduct/CreateProduct.css
@@ -27,7 +27,7 @@
  text-align: center;
 }
  .form-item {
-  background-color:#f0e7e0;
+  background-color:var(--fields-bg-color);
   padding: .4em .5em;
   margin: 20px 0;
   border-radius: 5px;
@@ -42,7 +42,7 @@
   margin-left: .2em;
   border: none;
   border-radius: 5px;
-  background-color:#f0e7e0;
+  background-color:var(--fields-bg-color);
 }
 .form-item input:focus {
   outline: none;
@@ -50,7 +50,7 @@
 
 .form-container button {
   /* background-color: #f2e3d5; */
-  background-color:#f0e7e0;
+  background-color:var(--fields-bg-color);
   width: 90%;
   max-width: 15em;
   padding: .8em 0;
