--- a/src/pages/stock/Stock.css
+++ b/src/pages/stock/Stock.css
@@ -16,7 +16,8 @@
   width: 60px;
   /* height: 60px; */
   transition: 0.2s ease-in-out;
-  margin-top: 28px 
+  margin-top: 28px ;
+  color: red
 }
 .add-icon:hover {
   cursor: pointer;
