--- a/src/components/createProduct/CreateProduct.css
+++ b/src/components/createProduct/CreateProduct.css
@@ -1,13 +1,6 @@
-.createProduct-container {
-  background-color: rgba(0, 0, 0, 0.7);
-  height: 100vh;
-  width: 100vw;
-  position: fixed;
-  z-index: 10;
-}
 
-.form-container {
-  background-color: rgba(0, 0, 0, 0.8);
+  .createProduct-container {
+  /* background-color: var(--main-bg-color); */
   width: 90%;
   max-width: 500px;
   padding: 2em;
@@ -48,7 +41,7 @@
   outline: none;
 }
 
-.form-container button {
+.createProduct-container button {
   /* background-color: #f2e3d5; */
   background-color:var(--fields-bg-color);
   width: 90%;
@@ -61,12 +54,11 @@
   transition: 0.2s ease-in;
 }
 
-.form-container button:hover {
+.createProduct-container button:hover {
   cursor: pointer;
   background-color: #ddd;
 }
-
-.form-container .close-icon {
+.createProduct-container .close-icon {
   transition: ease-in 0.1s;
   position: absolute;
   top: 0;
@@ -74,7 +66,7 @@
   margin: 10px;
 }
 
-.form-container .close-icon:hover {
+.createProduct-container .close-icon:hover {
   cursor: pointer;
   transform: scale(1.15);
 }
