--- a/src/components/multiLanguages/MultiLanguages.css
+++ b/src/components/multiLanguages/MultiLanguages.css
@@ -1,7 +1,4 @@
 .multi-languages {
-    /* position: absolute;  */
-    /* right: 10px; */
-     /* margin: 5px ; */
      display: flex;
      align-items: center;
 }
@@ -17,5 +14,5 @@
 }
 
 .multi-languages img:active{
-    width: 40px
+    transform: scale(1.3);
 }
