--- a/src/pages/shoppingList/components/Modals.css
+++ b/src/pages/shoppingList/components/Modals.css
@@ -3,6 +3,8 @@
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.6);
   position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   z-index: 10;
@@ -37,7 +39,7 @@
 }
 
 .btns {
-  padding-top: 20px;
+  padding-top: 10px;
   height: 80px;
   display: flex;
   align-items: center;
@@ -59,7 +61,6 @@
   background-color: var(--fields-bg-color);
   height: 28px;
   transition: 0.1s ease-in;
-  margin-top: 15px;
 }
 
 .btn:hover {
@@ -73,11 +74,10 @@
 
 .edit-modal {
   width: 450px;
-  height: 250px;
-
-  top: 100px;
+  max-width: 90%;
+  height: 240px;
+  top: 110px;
   padding: 20px;
-  /* background-color: rgba(0, 0, 0); */
   background-color: #222;
   color: #eee;
   display: flex;
@@ -97,5 +97,16 @@
 
 
 .content-edit-modal :first-child {
-  padding: 0 15px;
+  padding: 0 12px;
+}
+
+@media (max-width: 600px) {
+  
+.modal-title {
+  font-size: 17px;
+}
+.content-edit-modal :first-child {
+  padding: 0 5px;
+}
+
 }
