--- a/src/pages/cook/meals/mealList/MealList.css
+++ b/src/pages/cook/meals/mealList/MealList.css
@@ -32,6 +32,10 @@
   background-color: var(--fields-hover-bg-color);
 }
 
+a {
+  text-decoration: none;
+  color: #000;
+}
 .btn-add-more-mealList{
   position: fixed;
   bottom: 5%;
