Styling EditSingleMealProduct component

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,10 @@
   --fields-hover-bg-color: #e0d0c3;
   --nav-bg-color: #000;
   --nav-color: #777;
+  --btns-bg: linear-gradient(90deg,
+  rgba(0, 7, 36, 1) 0%,
+  rgba(9, 55, 121, 1) 75%,
+  rgba(0, 92, 255, 1) 100%);
 }
 
 
