--- a/src/pages/cook/meals/mealList/editSingleMeal/EditSingleMealProduct.css
+++ b/src/pages/cook/meals/mealList/editSingleMeal/EditSingleMealProduct.css
@@ -14,7 +14,7 @@
     border-radius: 5px;
 }
 
-.editSingleMealProduct button{
+.save-button{
     background: var(--btns-bg );
     align-self: center;
     margin: 30px;
@@ -22,11 +22,17 @@
     border-radius: 5px;
     border: none;
     color: #fff;
-    font-size: 1em
+    font-size: 1em;
+    transition: transform ease-in .1s;
+}
+.save-button:hover {
+    cursor: pointer;
+    transform: scale(1.05)
 }
 
 .form-editMealProduct {
     display: flex;
+    justify-content: space-between;
     background-color: var(--fields-bg-color);
     padding: 20px 0;
     border-radius: 5px;
@@ -45,4 +51,13 @@
     padding: 5px;
     border: 1px solid gray;
     border-radius: 5px
+}
+.form-editMealProduct img {
+    margin: 0 1em;
+    width: 28px;
+    transition: transform ease-in .2s
+}
+.form-editMealProduct img:hover {
+    cursor: pointer;
+    transform: scale(1.2)
 }
