Instalation and design

--- a/src/App.less
+++ b/src/App.less
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+//  @import '~antd/dist/antd.css';
+//  @import '~antd/dist/antd.less'; 
 
 /* bg-colors: darkslategray, #026773; */
 * {
@@ -20,16 +22,16 @@
   --nav-bg-color: #000;
   --nav-color: #777;
   --btns-bg: linear-gradient(90deg,
-  rgba(0, 7, 36, 1) 0%,
-  rgba(9, 55, 121, 1) 75%,
-  rgba(0, 92, 255, 1) 100%);
+      rgba(0, 7, 36, 1) 0%,
+      rgba(9, 55, 121, 1) 75%,
+      rgba(0, 92, 255, 1) 100%);
 }
 
 
 
 body.dark {
   --main-bg-color: #000;
-  --fields-bg-color:  #f7f2ee;
+  --fields-bg-color: #f7f2ee;
   --fields-hover-bg-color: #cdc5c0;
   --nav-bg-color: #222;
   --nav-color: #999;
@@ -54,7 +56,6 @@ body.dark {
 }
 
 .disabled {
-    opacity: 0.3;
-    cursor: auto;
+  opacity: 0.3;
+  cursor: auto;
 }
-
