--- a/src/components/handleRemoval/HandleRemoval.css
+++ b/src/components/handleRemoval/HandleRemoval.css
@@ -1,15 +1,14 @@
 .handle-removal button {
-    /* font-size: 30px; */
-    height: 100%;
+    margin: 10px 0;
+    justify-content: center;
     border-radius: 8px;
     border: none;
-    padding: 0 8px;
+    padding: 8px;
     background-color: var(--fields-bg-color);
     transition: 0.15s ease
 }
 
 .handle-removal button:hover {
     cursor: pointer;
-    /* background-color: var( --fields-hover-bg-color); */
     transform: scale(1.02);
 } 
