--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Titillium+Web:wght@300;400&display=swap');
 
-
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
-
-/* @import 'antd/lib/space/style/index.css'; */
-/* @import "~antd/lib/style/themes/default.less"; */
-/* @import 'antd/lib/date-picker/style/index.css'; */
-
-/* bg-colors: darkslategray, #026773; */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  /* font-family: 'Lato', sans-serif; */
+  font-family: 'Titillium Web', sans-serif;
   font-weight: lighter;
+  letter-spacing: .6px;
 }
 
 .App {
