--- a/src/pages/cook/historyOfCooking/HistoryOfCooking.css
+++ b/src/pages/cook/historyOfCooking/HistoryOfCooking.css
@@ -78,6 +78,12 @@
       transition: all 0.05s ease;
   }
 
+  .history-single-item:hover {
+    cursor: pointer;
+    background-color: var(--fields-hover-bg-color);
+    transform: scale(1.01);
+  }
+
   .history-single-item .first-div {
       display: flex;
       justify-content: space-between;
