--- a/src/pages/shoppingList/ShoppingList.css
+++ b/src/pages/shoppingList/ShoppingList.css
@@ -14,12 +14,12 @@
 
 .btn-shopping-complete {
   width: 60%;
-  padding: 8px 10px;
+  padding: 2px 10px;
   display: block;
   border-radius: 5px;
   border: none;
-  margin: 10px auto 0 auto;
-  font-size: 20px;
+  margin: 20px auto 0 auto;
+  font-size: 1.2rem;
   transition: 0.1s ease-in;
   background-color: var(--fields-bg-color)
 }
