--- a/src/pages/cook/historyOfCooking/HistoryOfCooking.css
+++ b/src/pages/cook/historyOfCooking/HistoryOfCooking.css
@@ -1,195 +1,183 @@
+/* Datepicker */
+.datepicker-container {
+    background-color: var(--main-bg-color);
+}
 
+.datepicker-wrapper {
+    max-width: 600px;
+    width: 92%;
+    margin: 0 auto;
+    padding-top: 5px;
 
-  /* Datepicker */
-  .datepicker-container {
-      background-color: var(--main-bg-color);
+}
 
-  }
+.datepicker-inner {
+    text-align: center;
+}
 
-  .datepicker-wrapper {
-      display: flex;
-      flex-direction: column;
-      max-width: 600px;
-      width: 92%;
-      margin: 0 auto;
-      padding-top: 5px;
-     
-  }
-  .datepicker {
-      position: relative;
-      min-width: 220px;
-      width: 100%;
-   
-  }
+.btns-datepicker {
+    display: flex;
+    justify-content: center;
+}
 
-  .range-history-lisit-container {
+.btns-datepicker button {
+    min-width: 78px;
+    padding: 1px;
+    margin: -5px 2px 0 2px;
+    border-radius: 3px;
+    border: none;
+    background-color: #fff;
+    transition: transform ease-in .1s;
+}
+
+.btns-datepicker button:hover {
+    cursor: pointer;
+    transform: scale(1.05)
+}
+
+.range-history-lisit-container {
     margin-top: 10px;
-  }
+}
 
-  .space-beetwen{
+.space-beetwen {
     border-bottom: 1px solid black;
     width: 106%;
     height: 20px;
     border-radius: 20px;
     transform: translateX(-3%);
-  }
+}
 
-  .datepicker-input {
-      text-align: center;
-      width: 100%;
-      padding: 7px 17px 7px 7px;
-      border-radius: 6px;
-      border: none;
-      font-size: .9rem;
-      font-weight: normal;
-      line-height: 1.5;
-      background-color: var(--fields-bg-color);
-  }
+.cancel-datepicker-img {
+    width: 25px;
+    height: 25px;
+    transition: transform ease-in 0.1s
+}
 
-  .datepicker-input:focus {
-      outline: none;
-  }
+.cancel-datepicker-img:hover {
+    transform: scale(1.2);
+    cursor: pointer;
+}
 
-  .cancel-datepicker-img {
-      position: absolute;
-      width: 25px;
-      right: 2px;
-      top: 5px;
-      transition: transform ease-in 0.1s
-  }
+/* History Single Item */
 
-  .cancel-datepicker-img:hover {
-      transform: scale(1.2);
-      cursor: pointer;
-  }
+.history-single-item {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+    background-color: var(--fields-bg-color);
+    width: 100%;
+    margin: 4px 0;
+    border-radius: 5px;
+    transition: all 0.05s ease;
+}
 
-  /* History Single Item */
-
-  .history-single-item {
-      position: relative;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0 10px;
-      background-color: var(--fields-bg-color);
-      width: 100%;
-      margin: 4px 0;
-      border-radius: 5px;
-      transition: all 0.05s ease;
-  }
-
-  .history-single-item:hover {
+.history-single-item:hover {
     cursor: pointer;
     background-color: var(--fields-hover-bg-color);
     transform: scale(1.01);
-  }
+}
 
-  .history-single-item .first-div {
-      display: flex;
-      justify-content: space-between;
-      min-width: 40%;
-      /* margin-right: 20%; */
-  }
+.history-single-item .first-div {
+    display: flex;
+    justify-content: space-between;
+    min-width: 40%;
+}
 
-  .more-img {
-      height: 32px;
-      transition: transform 0.1s ease-in
-  }
+.more-img {
+    height: 32px;
+    transition: transform 0.1s ease-in
+}
 
-  .more-img:hover {
-      cursor: pointer;
-      transform: scale(1.2)
-  }
+.more-img:hover {
+    cursor: pointer;
+    transform: scale(1.2)
+}
 
-  /* More information */
+/* More information */
 
-  .history-details-single-item {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 3px 10px;
-      background-color: var(--fields-bg-color);
-      width: 100%;
-      margin: 4px 0;
-      border-radius: 5px;
-      transition: all 0.05s ease;
-  }
+.history-details-single-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 3px 10px;
+    background-color: var(--fields-bg-color);
+    width: 100%;
+    margin: 4px 0;
+    border-radius: 5px;
+    transition: all 0.05s ease;
+}
 
-  .history-details-single-item .first-div {
-      min-width: 30%;
-  }
-.history-details-single-item .date{
-    /* font-family: 'Roboto', sans-serif; */
+.history-details-single-item .first-div {
+    min-width: 30%;
+}
+
+.history-details-single-item .date {
     font-size: .9rem;
 }
 
-  .history-details-single-item p{
-    /* font-size: .9rem; */
-  }
-  .history-details-single-item .amount{
-    /* font-size: 1.1rem; */
-  }
-  .history-details-single-item .second-div{
+
+.history-details-single-item .second-div {
     display: flex;
     justify-content: space-between;
     min-width: 45%;
-          max-width: 70%;
-  } 
+    max-width: 70%;
+}
 
-  .details-modal-container {
-      width: 100vw;
-      height: 100vh;
-      background-color: rgba(0, 0, 0, 0.8);
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 10;
-  }
+.details-modal-container {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.8);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+}
 
-  .details-inner {
-      margin: 11% auto;
-      max-width: 550px;
-      /* width: 80%; */
-      z-index: 111
-  }
+.details-inner {
+    margin: 11% auto;
+    max-width: 550px;
+    z-index: 111
+}
 
-  .details-header {
-      background-color: var(--fields-bg-color);
-      text-align: center;
-      padding: 0 10px 10px 10px;
+.details-header {
+    background-color: var(--fields-bg-color);
+    text-align: center;
+    padding: 0 10px 10px 10px;
     border-radius: 7px;
-  }
+}
 
-  .details-header div {
-      display: flex;
-      justify-content: space-between;
-  }
+.details-header div {
+    display: flex;
+    justify-content: space-between;
+}
 
-  .details-header p {
-      align-self: center;
-  }
+.details-header p {
+    align-self: center;
+}
 
-  .close-img {
-      width: 30px;
-      transition: transform 0.1s ease-in
-  }
+.close-img {
+    width: 30px;
+    transition: transform 0.1s ease-in
+}
 
-  .close-img:hover {
-      cursor: pointer;
-      transform: scale(1.2)
-  }
+.close-img:hover {
+    cursor: pointer;
+    transform: scale(1.2)
+}
 
 
-  @media (max-width: 500px) {
-      .history-single-item .first-div {
-          min-width: 65%;
-      }
-  
-  }
+@media (max-width: 500px) {
+    .history-single-item .first-div {
+        min-width: 65%;
+    }
 
-  @media (max-width: 800px) {
-      .details-inner {
-          width: 93%
-      }
-    
-  }
+}
+
+@media (max-width: 800px) {
+    .details-inner {
+        width: 93%
+    }
+
+}
