--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -101,7 +101,7 @@
     z-index: -10;
     padding: 30px 0;
     opacity: 0;
-    animation: slideOut .3s cubic-bezier(0.62, 0.04, 0.3, 1.56);
+    /* animation: slideOut 6s cubic-bezier(0.62, 0.04, 0.3, 1.56); */
     transition-delay: 100ms;
   }
 
@@ -132,7 +132,7 @@
     opacity: 1;
     display: flex;
     flex-direction: column;
-    animation: slideIn 0.6s cubic-bezier(.62, .04, .3, 1.56);
+    animation: slideIn 0.4s cubic-bezier(.62, .04, .3, 1.56);
     animation-fill-mode: forwards;
   }
 
@@ -153,13 +153,11 @@
     0% {
       opacity: 1;
       width: 75%;
-      z-index: 10;
     }
 
     100% {
       opacity: 0;
       width: 0%;
-      z-index: 10;
     }
   }
 
