--- a/src/pages/shoppingList/ShoppingList.css
+++ b/src/pages/shoppingList/ShoppingList.css
@@ -1,6 +1,4 @@
 .shoppingList-container {
-  /* background-color: #f28db2; */
-  /* background-color: #026773; */
   background-color: var(--main-bg-color);
   box-sizing: border-box;
 }
@@ -13,20 +11,19 @@
 }
 
 .btn-shopping-complete {
-  width: 60%;
-  padding: 2px 10px;
+  padding: 2px 20px;
   display: block;
   border-radius: 5px;
   border: none;
   margin: 20px auto 0 auto;
   font-size: 1.2rem;
   transition: 0.1s ease-in;
-  background-color: var(--fields-bg-color)
+  background-color: var(--fields-bg-color);
 }
 
 .btn-shopping-complete:hover {
   cursor: pointer;
   transform: scale(1.02);
   z-index: 0;
-  background-color: var(--fields-hover-bg-color)
+  background-color: var(--fields-hover-bg-color);
 }
