--- a/src/pages/shoppingList/components/Modals.css
+++ b/src/pages/shoppingList/components/Modals.css
@@ -11,11 +11,11 @@
 }
 
 .modal {
-  width: 400px;
+  width: 450px;
   min-height: 200px;
   max-height: 300px;
-  margin-top: 100px;
   padding: 20px;
+  margin: 100px 10px 0 10px;
   background-color: rgba(0, 0, 0, 0.9);
   border-radius: 5%;
   color: #eee;
@@ -49,7 +49,8 @@
 }
 
 .btn {
-  width: 120px;
+  width: 100%;
+  /* padding: 0 20px; */
   height: 28px;
   margin: 0 20px;
   font-size: 17px;
