--- a/src/pages/shoppingList/SingleShoppingListProduct.css
+++ b/src/pages/shoppingList/SingleShoppingListProduct.css
@@ -7,10 +7,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2px 10px;
+  padding: 4px 10px;
+  margin: 2.5px 0;
   background-color: var(--fields-bg-color);
   width: 100%;
-  margin: 4px 0;
   border-radius: 5px;
   transition: all 0.05s ease;
 }
@@ -26,7 +26,7 @@
 }
 
 .product-info {
-  font-size: 17px;
+  /* font-size: 17px; */
   margin-right: 10px;
 }
 
