--- a/src/pages/stock/Stock.css
+++ b/src/pages/stock/Stock.css
@@ -30,13 +30,13 @@
 }
 
 
-/* ProductsList component  */
+/* Single product */
 .single-stock-product {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 6px 0;
   padding: 0 10px;
+  margin: 4px 0;
   border-top: 1px solid #999;
   border-bottom: 1px solid #999;
   border-radius: 5px;
