Revert "Fixed bug historyOfCooking - 1. After select range history, can't clicked in others components. 2. Imporove navigation"
This reverts commit 90d733a60c0d3ba4c4a4796cb7223386307beff2.

--- a/src/pages/cook/meals/meal/Meal.css
+++ b/src/pages/cook/meals/meal/Meal.css
@@ -1,20 +1,25 @@
 .meal-container {
+  /* background-color: #51959E; */
+  /* background-color: #8C3B07; */
   background-color: var(--main-bg-color);
 }
 .inside-meal {
   max-width: 600px;
-  width: 90%;
+ width: 90%;
   margin: 0 auto;
 }
 
 .meal-header {
   display: flex;
-  justify-content: space-between;
   padding-top: 10px;
+  /* margin: 0 50px */
 }
 
 .arrow-back {
+  /* grid-column: 1 / 2;
+    grid-row: 1 / 2 */
   transition: ease-in-out 0.2s;
+  /* background-color: #f3f4e6; */
   background-color: var(--fields-bg-color);
   border-radius: 10px;
 }
@@ -25,7 +30,6 @@
 
 .meal-title {
   margin: 0 auto;
-  transform: translateX(-25.5px);
   padding-top: 20px;
   align-self: center;
   color: #f3f4e6;
