--- a/src/pages/cook/historyOfCooking/HistoryOfCooking.css
+++ b/src/pages/cook/historyOfCooking/HistoryOfCooking.css
@@ -65,8 +65,9 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 10px;
-  margin: 4px 0;
   background-color: var(--fields-bg-color);
+  width: 100%;
+  margin: 4px 0;
   border-radius: 5px;
   transition: all 0.05s ease;
 }
@@ -133,8 +134,9 @@
   justify-content: space-between;
   align-items: center;
   padding: 3px 10px;
-  margin: 4px 0;
   background-color: var(--fields-bg-color);
+  width: 100%;
+  margin: 4px 0;
   border-radius: 5px;
   transition: all 0.05s ease;
 }
