--- a/src/pages/shoppingList/SingleShoppingListProduct.css
+++ b/src/pages/shoppingList/SingleShoppingListProduct.css
@@ -7,7 +7,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2px 10px;
+  padding: 4px 10px;
+  margin: 2.5px 0;
   background-color: var(--fields-bg-color);
   width: 100%;
   margin: 4px 0;
@@ -26,7 +27,6 @@
 }
 
 .product-info {
-  font-size: 17px;
   margin-right: 10px;
 }
 
